AC_INIT(../include/ptlib.h)

AC_PROG_CXX

dnl ########################################################################
dnl set the PWLIB directory to the current directory

PWLIBDIR=`pwd`
echo "Plugin source directory is $PWLIBDIR";
AC_SUBST(PWLIBDIR)
dnl set the pwlib installation dir for pwlib-config
AC_SUBST(PWINSTDIR)

dnl ########################################################################
dnl set the PREFIX accordingly
if test "x$prefix" = "xNONE"; then
   INSTALLPREFIX="/usr/local"
else
   INSTALLPREFIX="${prefix}"
fi

AC_SUBST(INSTALLPREFIX)

dnl ########################################################################
dnl set LIBDIR accordingly
LIBDIR="${libdir}"
AC_SUBST(LIBDIR)

dnl #########################################################################
dnl check for Alsa sound support
dnl ########################################################################

AC_ARG_ENABLE(alsa, [  --enable-alsa           enable ALSA audio support],,enable_alsa=yes)

if test "$enable_alsa" = "yes" ; then
  AC_CHECK_HEADER(alsa/asoundlib.h, ALSAHDR=1)
  AC_MSG_CHECKING(for ALSA sound support)
  if test "${ALSAHDR:-unset}" != "unset"; then
    AC_SUBST(HAS_ALSA, 1)
    AC_MSG_RESULT(yes)
  else
    AC_MSG_RESULT(no)
  fi
fi

dnl #########################################################################
dnl check for OSS sound support
dnl ########################################################################

AC_ARG_ENABLE(oss, [  --enable-oss            enable OSS audio support],,enable_oss=yes)

if test "$enable_oss" = "yes" ; then
  AC_CHECK_HEADER(sys/soundcard.h, SNDCARDHDR=1)
  AC_MSG_CHECKING(for OSS sound support)
  if test "${SNDCARDHDR:-unset}" != "unset"; then
    AC_SUBST(HAS_OSS, 1)
    AC_MSG_RESULT(yes)
  else
    AC_MSG_RESULT(no)
  fi
fi


dnl ########################################################################
dnl output header file

AC_CONFIG_FILES(Makefile)

AC_OUTPUT()
